name:                compound-map
version:             0.1.0.0
synopsis:            Compound maps
-- description:
homepage:            https://github.com/fumieval/compound-map#readme
license:             BSD3
license-file:        LICENSE
author:              Fumiaki Kinoshita
maintainer:          fumiexcel@gmail.com
copyright:           Copyright (c) 2017 Fumiaki Kinoshita
category:            Data
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Map.Compound
  build-depends:       base >= 4.7 && < 5, containers
  default-language:    Haskell2010


source-repository head
  type:     git
  location: https://github.com/fumieval/compound-map
